--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     }
 </style>
 <body>
-    <audio autoplay loop>
+    <div class="plc"></div>
+    <audio autoplay controls loop>
         <source src="TxJdLVlwKgZebdqt.mp3" type="audio/mp3">
     </audio>
-    <div class="plc"></div>
 </body>
 </html>
