--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </style>
 <body>
     <div class="plc"></div>
-    <audio autoplay controls loop>
+    <audio autoplay controls>
         <source src="TxJdLVlwKgZebdqt.mp3" type="audio/mp3">
     </audio>
 </body>
