--- a/index.html
+++ b/index.html
@@ -1,33 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <source src="TxJdLVlwKgZebdqt.mp3" type="audio/mp3">
-    <title>Document</title>
-</head>
-<style>
-    body{
-        background-image: url('RGX8wjUFTNLm2vxf.png');
-        background-size: cover;
-    }
-    .plc{
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height:100%;
-        background-image: url('RGX8wjUFTNLm2vxf.png');
-        background-size: cover;
-    }
-</style>
-<body>
-    <div class="plc"></div>
-    <audio autoplay controls>
-        <source src="TxJdLVlwKgZebdqt.mp3" type="audio/mp3">
-    </audio>
-</body>
+    </script>
+window.location='https://github.com/beyond-space21/big-Guy'
 </html>
