--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    </script>
+    <script>
 window.location='https://github.com/beyond-space21/big-Guy'
+</script>
 </html>
