--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <body>
+    </body>
     <script>
+        window.onload=function(){
 window.location='https://github.com/beyond-space21/big-Guy'
+        }
 </script>
 </html>
