--- a/v.html
+++ b/v.html
@@ -3,6 +3,6 @@
 <head></head>
 <body></body>
 <script>
-    location = "http://localhost:5500/"
+    location = "http://192.168.1.105:5500/"
 </script>
 </html>
